--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
-html, body {
-  margin: 0;
-  padding: 0;
-}
-canvas {
-  display: block;
-}
+html,
+                body
+                {
+                    margin: 5;
+                    padding: 0;
+                }
+                h1
+                {
+                    margin-left: 50px;
+                }
+                canvas
+                {
+                    margin-left: 50px;
+                    margin-top: 15px;
+
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border: 1px solid green;
+
+                }
